add support for deployment annotations

--- a/charts/powerdns/templates/deployment.yaml
+++ b/charts/powerdns/templates/deployment.yaml
@@ -4,6 +4,10 @@ metadata:
   name: {{ include "powerdns.fullname" . }}
   labels:
 {{ include "powerdns.labels" . | indent 4 }}
+{{- if .Values.deployment.annotations }}
+  annotations:
+{{ toYaml .Values.deployment.annotations | indent 4 }}
+{{- end }}
 spec:
   replicas: {{ .Values.replicaCount }}
   selector:
