--- a/charts/powerdns/values.yaml
+++ b/charts/powerdns/values.yaml
@@ -8,7 +8,7 @@ strategyType: Recreate
 image:
   repository: naps/powerdns
   tag: 4.3.1
-  pullPolicy: Always
+  pullPolicy: IfNotPresent
 
 imagePullSecrets: []
 nameOverride: ""
